# semestre_v

./: .gitignore  README.md  analizadoir_sentimientos.py  pyproject.toml  requirements.txt  test.py
algoritmos_bioinspirados/: ACO.py  ACO_ejercicio.py  Algoritmo_EDA.ipynb  aco_practica.ipynb  algotimo_cuantico.ipynb  colonia_de_hormigas.ipynb  deap_libreria (programación genetica).ipynb  deap_libreria.ipynb  edas_algoritmo.ipynb  evolucion_diferencial.ipynb  primer_algorimo_genetico.ipynb  primer_algorimo_genetico.py  recocido_similado.ipynb  velucion_adaptativa.ipynb
algoritmos_bioinspirados/data/: data.xlsx
algoritmos_bioinspirados/proyecto_1/: Proyecto1_Bioinspirados.ipynb  primer_algorimo_genetico.ipynb  proyecto_ackley.ipynb
algoritmos_bioinspirados/proyecto_3/: programacion_genetica_proyecto.ipynb  proyecto_2.py  proyecto_3.py  proyecto_3_3_.py
algoritmos_bioinspirados/proyecto_4/: Proyecto4.ipynb  evolucion_diferencial.ipynb
ciencia_de_datos_aplicada_a_la_economia/: EXAMEN.PY  Hola.py  actividad_16.py  actividad_19.py  actividad_20.py  actividad_23.py  actividad_9.ipynb  clase_2.ipynb  clase_3.ipynb  repaso.py  yahoo_finance.ipynb
numpy_study/: learning_numpy.ipynb
procesamiento_en_paralelo/: Codigo01c.py  Codigo03.py  Codigo04.py  Codigo2b.py  Codigo3c.py  GeneticoFrase.py  GeneticoTSP.py  ejercicio.py  ejercicio_prueba.ipynb  mi4py_prueba.py  numba_ejemplo.py  tarea.py
procesamiento_lenguaje/: clase_1.ipynb  embbedings.ipynb  fernando_leon_franco_Practica2_BoW.ipynb  fernando_leon_franco_word_vectors.ipynb  iberoHandout-CNN-sentence-classification_to_fill.ipynb  modelo_red_lenguaje.ipynb  practica_modelo_de_lenguaje.ipynb  tarea_author copy.ipynb  tarea_author.ipynb  tarea_author_2_0.ipynb  tcore_clase_fernando_leon_franco.ipynb  word2vec_practica.ipynb  word_vectors.ipynb
proyectitos_personales/: analizadoir_sentimientos.py  polars_lib.ipynb  polars_lib_p.py  test_openai_agent_builder.py  test_sueldos.py
(+112 files in other folders)
