[project]
name = "semestre-v"
version = "0.1.0"
description = "A project for semestre V"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "beautifulsoup4==4.13.5",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "executing==2.2.0",
    "fastexcel>=0.15.1",
    "fonttools==4.59.1",
    "frozendict==2.4.6",
    "idna==3.10",
    "ipykernel==6.30.1",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "joblib==1.5.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.5",
    "matplotlib-inline==0.1.7",
    "multitasking==0.0.12",
    "nest-asyncio==1.6.0",
    "nltk==3.9.1",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.2",
    "parso==0.8.5",
    "peewee==3.18.2",
    "pexpect==4.9.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "polars==1.33.0",
    "prompt-toolkit==3.0.51",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow>=21.0.0",
    "pycparser==2.22",
    "pygments==2.19.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.0.2",
    "regex==2025.7.34",
    "requests==2.32.5",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "threadpoolctl==3.6.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
    "yfinance==0.2.65",
]
